# elb-dashboard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  azure.yaml  deploy.sh  mkdocs.yml  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/prompts/: review-frontend.prompt.md
.github/workflows/: build-images.yml  deploy.yml  docs.yml  release.yml  test.yml
aks/prepare-db/: Dockerfile
api/: Dockerfile  __init__.py  _http_utils.py  auth.py  celery_app.py  celery_signals.py  conftest.py  function_app.py  host.json  local.settings.json.example  main.py  requirements.txt  run_celery_workers.py  wait_redis.py
api/.python_packages/: requirements.txt.md5
api/activities/: blast.py  terminal.py
api/app/: __init__.py  global_exception_logging.py  inspector.py  jwt_utils.py  lifespan.py  logging_config.py  memory_diagnostics.py  middleware.py  openapi_rate_limit.py  security_headers.py  telemetry.py
api/auth/: token.py
api/models/: blast.py  terminal.py
api/orchestrators/: delete_blast.py  provision_aks.py  provision_terminal.py  storage_window.py  submit_blast.py  warmup_db.py
api/routes/: README.md  __init__.py  _blast_shared.py  acr.py  aks.py  arm.py  audit.py  blast.py  blast_jobs.py  blast_tools.py  client_log.py  cost.py  diagnostics.py  elastic_blast.py  frontend_proxy.py  health.py  me.py  monitor.py  ncbi.py  notifications.py  operations.py  resources.py  storage.py  stubs.py  tasks.py  terminal.py  terminal_legacy.py  terminal_ws.py  upgrade.py  warmup.py
api/services/: README.md  __init__.py  access_review.py  acr_build_state.py  aks_availability.py  aks_observability.py  aks_skus.py  app_insights_pref.py  app_insights_provisioning.py  arm_discovery_cache.py  arm_tag_rules.py  auto_stop.py  auto_stop_evaluator.py  auto_stop_live.py  auto_stop_sb_signal.py  auto_warmup.py  auto_warmup_reconcile.py  azure_clients.py  azure_dns.py  background_refresh.py  blast_compatibility.py  blast_config.py  blast_db_metadata.py  blast_equivalence_evidence.py  blast_events.py  blast_external_jobs.py  blast_job_state.py  blast_oracles.py  blast_provenance.py  blast_queue.py  blast_result_analytics.py  blast_result_artifacts.py  blast_result_manifest.py  blast_results_parser.py  blast_submit_gates.py  blast_submit_payload.py  blast_task_config.py  cgroup_reporter.py  cluster_health.py  cluster_timings.py  (+87 more)
api/tasks/: __init__.py  acr.py  azure.py  blast.py  blast_artifacts.py  openapi.py  storage.py  transient.py  upgrade.py  webhooks.py
api/tests/: conftest.py  persona_reader_allowlist.py  test_access_review.py  test_acr_build_task.py  test_acr_monitoring_pending.py  test_actor_audit.py  test_aks_autostop_route.py  test_aks_availability.py  test_aks_cancel_provision.py  test_aks_ensure_running.py  test_aks_observability_task.py  test_aks_openapi_databases.py  test_aks_recent_failed_provisions.py  test_aks_skus.py  test_aks_stale_provision_reconciler.py  test_api_hardening_batch2.py  test_app_insights_pref.py  test_arm_discovery_cache.py  test_arm_discovery_logging.py  test_auth_caching.py  test_auto_stop.py  test_auto_stop_evaluator.py  test_auto_stop_live.py  test_auto_stop_sb_signal.py  test_auto_stop_task.py  test_auto_warmup.py  test_az_context_acr_guard.py  test_azure_dns.py  test_azure_peering.py  test_azure_provision_aks.py  test_azure_tasks.py  test_background_refresh.py  test_blast_auto_retry.py  test_blast_auto_retry_task.py  test_blast_capacity_gate.py  test_blast_capacity_gate_counters.py  test_blast_capacity_route.py  test_blast_capacity_signals.py  test_blast_citation.py  test_blast_compatibility.py  (+321 more)
api_app/: .dockerignore  Dockerfile  __init__.py  auth.py  celery_app.py  conftest.py  main.py  requirements.txt
api_app/routes/: __init__.py  arm.py  frontend_proxy.py  health.py  me.py  monitor.py  resources.py  stubs.py  terminal_legacy.py  terminal_ws.py
api_app/services/: __init__.py  state_repo.py
api_app/tasks/: __init__.py
api_app/tests/: test_smoke.py
docs/: auth.md  blast-searchsp-discovery.md  changelog.md  container-apps-migration.md  deployment-reference.md  get-started.md  glossary.md  high-level-architecture.md  index.md  joining-existing-deployment.md  llms.txt  robots.txt  screenshot-capture-manifest.json  tags.md  troubleshooting.md  web-blast-compatibility-implementation-plan.md
docs/architecture/: authentication.md  container-apps.md  diagnostics.md  high-level.md  identity.md  index.md  runtime-plan.md  service-bus-examples.md  service-bus-integration.md  storage-contract.md
docs/contributor-guide/: archive-policy.md  index.md  screenshot-workflow.md
docs/copilot/: auth-flow.md  browser-terminal.md  codebase-map.md  glass-ui.md  index.md  monitoring-ui.md  repo-layout.md  resource-plane.md  security-audit-followup.md  version-management.md
docs/javascripts/: external-links.js  image-viewer.js  mermaid-init.js
docs/operate/: cli-upgrade.md  feature-gates.md  incident-runbook.md  index.md  openapi-direct-access.md  openapi-exec-rbac-gate.md  service-bus-result-downloads.md
docs/releases/: index.md  unreleased.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md
docs/research/: aks-capacity-gate.md  blast-searchsp-discovery.md  blast-submit-coordination.md  (+2 more)
grafana/: README.md
infra/: control-plane-env.json  main.bicep  main.json  main.parameters.json
legacy/: walkthrough.md
overrides/: main.html
terminal/: .dockerignore  Dockerfile  Dockerfile.base  Dockerfile.runtime  banner.sh  cgroup_reporter.py  command_guard.sh  elb_cfg.py  entrypoint.sh  exec_server.py  history.sh  merge-sharded-results.sh  motd  patch_elastic_blast.py  profile.sh  tmux-attach.sh  tmux.conf  tool-versions.sh
web/: .dockerignore  .env.example  .env.production  Dockerfile  cgroup_reporter.py  entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.e2e.config.ts  staticwebapp.config.json  supervisord.conf  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vite.config.ts.timestamp-1779631204717-29664092a99f9.mjs
(+2273 files in other folders)
