[project]
name = "elb-dashboard"
version = "0.3.0"
description = "Browser-only control plane for ElasticBLAST on Azure (FastAPI + Celery in Azure Container Apps)."
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "elb-dashboard maintainers" }]

dependencies = [
  # FastAPI / ASGI
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.0",
  "httpx==0.27.2",
  "pyjwt[crypto]==2.10.0",
  "websockets==13.1",

  # Celery + Redis broker
  "celery==5.4.0",
  "redis==5.2.0",

  # Azure SDK surface — covers everything api/services/* uses
  "azure-identity==1.19.0",
  "azure-storage-blob==12.23.1",
  "azure-data-tables==12.5.0",
  "azure-keyvault-secrets==4.9.0",
  "azure-mgmt-resource==23.2.0",
  "azure-mgmt-storage==21.2.1",
  "azure-mgmt-keyvault==10.3.1",
  "azure-mgmt-compute==33.0.0",
  "azure-mgmt-network==27.0.0",
  "azure-mgmt-containerregistry==10.3.0",
  "azure-mgmt-containerservice==32.1.0",
  "azure-mgmt-authorization==4.0.0",
  "azure-mgmt-msi==7.0.0",
  "azure-mgmt-monitor==6.0.2",
  "azure-mgmt-appcontainers==3.1.0",
  "azure-containerregistry==1.2.0",

  # Kubernetes Python client (used by services.monitoring k8s_* helpers)
  "kubernetes==31.0.0",

  # Pydantic for request/response models
  "pydantic==2.9.2",

  # XML parsing hardened against XXE / billion-laughs (NCBI Taxonomy efetch)
  "defusedxml==0.7.1",
]

[dependency-groups]
dev = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5,<10",
  # mkdocs-material `social` plugin dependencies — generate Open Graph PNG
  # cards at build time. Pinned conservatively; libcairo2 + fonts-dejavu
  # are expected to be present on the build host.
  "cairosvg>=2.7,<3",
  "pillow>=10.0,<12",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.7,<1",
  "mypy>=1.13,<2",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["api"]
extend-exclude = [".venv", "venv", "__pycache__", "legacy"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "RUF"]
ignore = [
  "B008", # FastAPI dependency injection intentionally uses Depends/Query/Body defaults
  "S101", # asserts in tests are fine
  "S104", # bind 0.0.0.0 — uvicorn binds inside the container
]
# `×` (U+00D7 MULTIPLICATION SIGN) is intentionally used in human-facing
# strings (e.g. "1 × Standard_E32s_v5") — keep it readable and stop ruff
# from flagging it as confusable with ASCII `x`.
allowed-confusables = ["×"]

[tool.ruff.lint.per-file-ignores]
"api/tests/**" = ["S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["api"]

# Tests use a lot of mock objects and dynamic constructs — relax strict
# mode for test files so the 770-error backlog does not block progress
# on production code.  Production modules stay fully strict.
[[tool.mypy.overrides]]
module = "api.tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
warn_return_any = false
warn_unused_ignores = false
# Allow looser typing in test code: mock objects, dynamic fixtures,
# and test-only constructs produce arg-type / assignment / attr-defined
# noise that does not reflect production risk.
disable_error_code = ["arg-type", "assignment", "attr-defined", "index", "type-arg", "operator", "var-annotated", "union-attr", "func-returns-value"]

# Celery task decorators are untyped in the celery stubs.
[[tool.mypy.overrides]]
module = "api.tasks.*"
disallow_untyped_decorators = false
